--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -35,8 +35,8 @@ main {
 }
 
 .container {
-  width: 60%; /* se for uma tela menor que 980px vai se adaptar a 70% */
-  max-width: 960px; /* quando chegar em 980px para de aumentar */
+  width: 60%;
+  max-width: 960px;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 25px 50px -12px;
   background-color: #fff;
   display: flex;
@@ -121,8 +121,6 @@ main {
   line-height: 23px;
 }
 
-/* REPOSITORIES */
-
 .container .profile-data .repositories h2{
   margin-bottom: 30px;
   text-align: center;
@@ -150,6 +148,48 @@ main {
 
 .container .profile-data.hide{
   display: none;
+}
+
+.events {
+  width: 100%;
+  max-width: 700px;
+  background-color: #f4f4f4;
+  padding: 30px;
+  border-radius: 15px;
+  margin: 40px auto 0;
+  box-shadow: 0px 5px 15px rgba(0,0,0,0.1);
+}
+
+.events h2 {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 24px;
+  color: #333;
+  font-weight: 700;
+}
+
+.event {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 16px;
+  color: #333;
+  margin-bottom: 15px;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  max-width: 100%;
+  text-align: left;
+}
+
+.event h3 {
+  font-weight: bold;
+  margin-right: 10px;
+  color: #000;
+}
+
+.event p {
+  white-space: pre-wrap;
+  word-break: break-word;
 }
 
 @media (max-width: 1280px) {
